# dddxb

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.claude/: settings.json
.streamlit/: secrets.toml.example
data/: README.md
data/published/: bayut_sale_history_4y.parquet  cohort_metrics_last12m.parquet  for_rent_clean_last12m.parquet  for_sale_clean_last12m.parquet  microlocality_ranking_last12m.parquet
docs/: data-sources.md  deploy.md  methodology.md  microlocalities.md
ideas/: 0001-rental-roi-by-microlocality.md  README.md
reports/: developer_roi_by_microlocality.csv  developer_roi_by_microlocality.md  developer_roi_examples.csv
scripts/: developer_roi.py  publish_data.py
src/dddxb/: __init__.py
src/dddxb/analysis/: __init__.py  developer_roi.py
src/dddxb/clean/: __init__.py  transactions.py
src/dddxb/dashboard/: __init__.py  app.py  chat.py  data.py  samples.py
src/dddxb/features/: __init__.py  __main__.py  metrics.py
src/dddxb/forecast/: __init__.py
src/dddxb/ingest/: __init__.py  __main__.py  bayut.py  config.py  dubai_pulse.py  dubai_pulse_api.py  sources.py  uae_realestate.py  uae_realestate_cli.py
tests/: test_dashboard.py  test_developer_roi.py  test_features.py  test_ingest.py  test_smoke.py  test_uae_realestate.py
