[project]
name = "dddxb"
version = "0.1.0"
description = "Data science & analytics on Dubai property transactions and listings"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1",
    "polars>=1.0",
    "pandas>=2.2",
    "pyarrow>=17",
    "numpy>=2.0",
    "geopandas>=1.0",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
    "plotly>=5.24",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
    "pytest>=8.3",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dddxb"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
